--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node --watch ./index.js"
+    "dev":"node --watch ./index.js",
+    "animals":"node --watch ./animal-world.js"
   },
   "keywords": [],
   "author": "",
