--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --watch ./static/validation-tests.js",
     "dev":"node --watch ./index.js",
+    "static":"node --watch ./static/index.js",
     "animals":"node --watch ./animal-world.js"
   },
   "keywords": [],
